--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "mockjs": "^1.0.1-beta3",
+    "moment": "^2.22.2",
     "vue": "^2.5.2",
     "vue-baidu-map": "^0.21.9",
     "vue-breadcrumbs": "^1.1.2",
