--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "less-loader": "^4.1.0",
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.22.2",
+    "v-infinite-scroll": "^1.0.4",
     "vue": "^2.5.2",
     "vue-baidu-map": "^0.21.9",
     "vue-breadcrumbs": "^1.1.2",
     "vue-echarts": "^3.0.7",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -57,6 +59,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.18.0",
+    "js-md5": "^0.7.3",
     "lodash": "^4.17.10",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
