--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "less-loader": "^4.1.0",
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.22.2",
+    "stompjs": "^2.3.3",
     "v-infinite-scroll": "^1.0.4",
     "video.js": "^7.2.2",
     "videojs-contrib-hls": "^5.14.1",
